--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -181,6 +181,70 @@ h1, h2, h3, h4, p, span {
   border: none;
 }
 
+.button-rounded-green {
+  cursor: pointer;
+  position: relative;
+  margin: auto;
+  display: block;
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  background: #42BCBB; /* For browsers that do not support gradients */
+  border-radius: 40px;
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Lato";
+  border: none;
+}
+
+.button-rounded-green-no-mar {
+  cursor: pointer;
+  position: relative;
+  display: block;
+  height: 50px;
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  background: #42BCBB; /* For browsers that do not support gradients */
+  border-radius: 40px;
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Lato";
+  border: none;
+}
+
+.button-rounded-grey-no-mar-small {
+  cursor: pointer;
+  position: relative;
+  display: block;
+  height: 30px;
+  padding: 5px 20px;
+  margin-bottom: 20px;
+  background: #818181; /* For browsers that do not support gradients */
+  border-radius: 40px;
+  color: white;
+  font-weight: 400;
+  font-size: 15px;
+  font-family: "Lato";
+  border: none;
+}
+
+.button-rounded-green-no-mar-small {
+  cursor: pointer;
+  position: relative;
+  display: block;
+  height: 30px;
+  padding: 5px 20px;
+  margin-bottom: 20px;
+  background: #42BCBB; /* For browsers that do not support gradients */
+  border-radius: 40px;
+  color: white;
+  font-weight: 400;
+  font-size: 15px;
+  font-family: "Lato";
+  border: none;
+}
+
 .button-rounded-grey {
   position: relative;
   margin: auto;
@@ -277,7 +341,6 @@ h1, h2, h3, h4, p, span {
   position: relative;
   margin: auto;
   display: block;
-  margin-top: 30px;
   padding: 10px 30px;
   background: #6175E0; /* For browsers that do not support gradients */
   border-radius: 40px;
@@ -526,7 +589,7 @@ hr {
   position: relative;
   margin: auto;
   display: block;
-  width: 70%;
+  width: 90%;
 }
 
 .article {
@@ -827,6 +890,16 @@ input[type="file"] {
   animation-timing-function: ease-in-out;
 }
 
+.lineClamp {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  line-height: 17;        /* fallback */
+  max-height: 34;
+}
+
 @keyframes floating {
     from { transform: translate(0,  0px); }
     65%  { transform: translate(0, 15px); }
@@ -842,4 +915,27 @@ input[type="file"] {
   --sb-progress-height: 8px;
   --button-big-padding-x: 1.25rem;
   --button-big-padding-y: 1.25rem;
+}
+
+.left-panel {
+  overflow: hidden;
+}
+
+div.left-panel:hover {
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+  z-index: 10;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
